--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'androidx.navigation.safeargs.kotlin'
     id 'kotlinx-serialization'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
@@ -38,13 +37,18 @@ android {
     }
     buildFeatures {
         viewBinding true
+//        compose true
     }
+
+//    composeOptions {
+//        kotlinCompilerExtensionVersion '1.3.0'
+//    }
 }
 
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.5.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -66,6 +70,18 @@ dependencies {
     implementation "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0"
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation 'io.coil-kt:coil:2.2.1'
+
+//    implementation 'androidx.compose.ui:ui:1.2.1'
+//    implementation 'androidx.compose.ui:ui-tooling:1.2.1'
+//    implementation 'androidx.compose.foundation:foundation:1.2.1'
+//    implementation 'androidx.compose.material:material:1.2.1'
+//    implementation 'androidx.activity:activity-compose:1.5.1'
+//    implementation "androidx.navigation:navigation-compose:$nav_version"
+//    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+//    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
+//    implementation 'androidx.compose.runtime:runtime-livedata:1.2.1'
+//    implementation "com.google.android.material:compose-theme-adapter:1.1.16"
+//    implementation 'io.coil-kt:coil-compose:2.2.1'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
