--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,12 +37,12 @@ android {
     }
     buildFeatures {
         viewBinding true
-//        compose true
+        compose true
     }
 
-//    composeOptions {
-//        kotlinCompilerExtensionVersion '1.3.0'
-//    }
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.3.0'
+    }
 }
 
 dependencies {
@@ -71,17 +71,17 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation 'io.coil-kt:coil:2.2.1'
 
-//    implementation 'androidx.compose.ui:ui:1.2.1'
-//    implementation 'androidx.compose.ui:ui-tooling:1.2.1'
-//    implementation 'androidx.compose.foundation:foundation:1.2.1'
-//    implementation 'androidx.compose.material:material:1.2.1'
-//    implementation 'androidx.activity:activity-compose:1.5.1'
-//    implementation "androidx.navigation:navigation-compose:$nav_version"
-//    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
-//    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
-//    implementation 'androidx.compose.runtime:runtime-livedata:1.2.1'
-//    implementation "com.google.android.material:compose-theme-adapter:1.1.16"
-//    implementation 'io.coil-kt:coil-compose:2.2.1'
+    implementation 'androidx.compose.ui:ui:1.2.1'
+    implementation 'androidx.compose.ui:ui-tooling:1.2.1'
+    implementation 'androidx.compose.foundation:foundation:1.2.1'
+    implementation 'androidx.compose.material:material:1.2.1'
+    implementation 'androidx.activity:activity-compose:1.5.1'
+    implementation "androidx.navigation:navigation-compose:$nav_version"
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
+    implementation 'androidx.compose.runtime:runtime-livedata:1.2.1'
+    implementation "com.google.android.material:compose-theme-adapter:1.1.16"
+    implementation 'io.coil-kt:coil-compose:2.2.1'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
